Added feature to add pics to the Candy object, read from txt and get the img too (showing it in the recyclerView), fixed txt so it saves the data when executed the app again

--- a/MyDeliciousCandiesv2/app/src/main/res/values/strings.xml
+++ b/MyDeliciousCandiesv2/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Practica IMCv3</string>
+    <string name="app_name">MyDeliciousCandies</string>
     <string name="peso_inferior">Peso inferior al normal </string>
     <string name="peso_normal">Normal </string>
     <string name="sobrepeso">Sobrepeso </string>
