--- a/Menu2/app/src/main/res/values/strings.xml
+++ b/Menu2/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="txt_btn_deletePrefs">eliminar preferencias</string>
     <string name="txt_open">open</string>
     <string name="txt_close">close</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
